--- a/src/styles/components/chat/_chat-wrapper-dropdown.scss
+++ b/src/styles/components/chat/_chat-wrapper-dropdown.scss
@@ -1,5 +1,5 @@
 .mynah-dropdown-list-container {
-  padding: var(--mynah-sizing-3) var(--mynah-sizing-4) 0 var(--mynah-sizing-4);
+  padding: var(--mynah-sizing-3) 0 0 0;
   display: flex;
   justify-content: flex-end;
   width: 100%;
